Add metrics computation and ground truth mask loading in inference script
Add checkpoint resume functionality in training script.

--- a/train_on_vast.ipynb
+++ b/train_on_vast.ipynb
@@ -84,7 +84,7 @@
         "        print(f\"  Memory: {torch.cuda.get_device_properties(i).total_memory / 1e9:.2f} GB\")\n",
         "    print(\"\\n✓ GPU verification successful!\")\n",
         "else:\n",
-        "    print(\"\\n✗ Warning: CUDA not available. Training will be slow on CPU.\")\n",
+        "    print(\"\\n✗ Warning: CUDA not available.\")\n",
         "    sys.exit(1)\n"
       ]
     },
@@ -279,11 +279,11 @@
         "    Path(\"Dataset/cracks/train/_annotations.coco.json\"),\n",
         "    Path(\"Dataset/cracks/valid/_annotations.coco.json\"),\n",
         "    Path(\"Dataset/prompts.json\"),\n",
-        "    Path(\"scripts/train_cracks.py\"),\n",
-        "    Path(\"scripts/model.py\"),\n",
-        "    Path(\"scripts/dataset.py\"),\n",
-        "    Path(\"scripts/losses.py\"),\n",
-        "    Path(\"scripts/utils.py\")\n",
+        "    Path(\"Scripts/train_cracks.py\"),\n",
+        "    Path(\"Scripts/model.py\"),\n",
+        "    Path(\"Scripts/dataset.py\"),\n",
+        "    Path(\"Scripts/losses.py\"),\n",
+        "    Path(\"Scripts/utils.py\")\n",
         "]\n",
         "\n",
         "print(\"Verifying setup...\")\n",
