Update training notebook

--- a/train_on_vast.ipynb
+++ b/train_on_vast.ipynb
@@ -111,7 +111,7 @@
         "    print(\"Warning: ROBOFLOW_API_KEY not set. Please set it as an environment variable.\")\n",
         "    print(\"You can get your API key from: https://app.roboflow.com/\")\n",
         "    # Uncomment and set your API key here if needed:\n",
-        "    # os.environ[\"ROBOFLOW_API_KEY\"] = \"your_api_key_here\"\n",
+        "    os.environ[\"ROBOFLOW_API_KEY\"] = \"mKEEAYONehNe8uHceqaG\"\n",
         "else:\n",
         "    print(\"✓ ROBOFLOW_API_KEY found\")\n",
         "\n",
@@ -122,9 +122,9 @@
         "\n",
         "# Download the cracks dataset\n",
         "# Update these values based on your Roboflow project\n",
-        "workspace_name = \"Ayush-Lab\"  # Update with your workspace\n",
-        "project_name = \"cracks\"  # Update with your project name\n",
-        "version = 1  # Update with your dataset version\n",
+        "workspace_name = \"ayushlab\"  # Update with your workspace\n",
+        "project_name = \"cracks-3ii36-ahsib\"  # Update with your project name\n",
+        "version = 2  # Update with your dataset version\n",
         "\n",
         "print(f\"\\nDownloading dataset: {workspace_name}/{project_name} (version {version})\")\n",
         "project = rf.workspace(workspace_name).project(project_name)\n",
@@ -340,8 +340,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "import sys\n",
+        "import subprocess\n",
+        "\n",
         "# Build training command\n",
-        "cmd_parts = [\"python\", \"scripts/train_cracks.py\"]\n",
+        "cmd_parts = [\n",
+        "    sys.executable,\n",
+        "    \"Scripts/train_cracks.py\",\n",
+        "]\n",
         "\n",
         "for key, value in training_config.items():\n",
         "    if isinstance(value, bool):\n",
@@ -360,7 +366,7 @@
         "    cmd_parts,\n",
         "    stdout=subprocess.PIPE,\n",
         "    stderr=subprocess.STDOUT,\n",
-        "    universal_newlines=True,\n",
+        "    text=True,\n",
         "    bufsize=1\n",
         ")\n",
         "\n",
