--- a/train_on_vast.ipynb
+++ b/train_on_vast.ipynb
@@ -111,7 +111,7 @@
         "    print(\"Warning: ROBOFLOW_API_KEY not set. Please set it as an environment variable.\")\n",
         "    print(\"You can get your API key from: https://app.roboflow.com/\")\n",
         "    # Uncomment and set your API key here if needed:\n",
-        "    os.environ[\"ROBOFLOW_API_KEY\"] = \"mKEEAYONehNe8uHceqaG\"\n",
+        "    os.environ[\"ROBOFLOW_API_KEY\"] = \"KEY\"\n",
         "else:\n",
         "    print(\"✓ ROBOFLOW_API_KEY found\")\n",
         "\n",
